--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
+
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
     </head>
@@ -51,6 +53,7 @@
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/abhijatchaturvedi"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/abhijatchaturvedi"><i class="fab fa-github"></i></a>
+						<a class="social-icon" href="https://github.com/abhijatchaturvedi"><i class="ai ai-google-scholar-square ai-3x"></i></a>
                     </div>
                 </div>
             </section>
