--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/abhijatchaturvedi"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/abhijatchaturvedi"><i class="fab fa-github"></i></a>
-						<a class="social-icon" href="https://github.com/abhijatchaturvedi"><i class="ai ai-google-scholar-square ai-3x"></i></a>
+						<a class="social-icon" href="https://github.com/abhijatchaturvedi"><i class="ai ai-google-scholar"></i></a>
                     </div>
                 </div>
             </section>
