--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/abhijatchaturvedi"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/abhijatchaturvedi"><i class="fab fa-github"></i></a>
-						<a class="social-icon" href="https://github.com/abhijatchaturvedi"><i class="fab fa-google-scholar"></i></a>
+						<a class="social-icon" href="https://scholar.google.com/citations?user=K-EL0PQAAAAJ&hl=en&oi=ao"><i class="fab fa-google-scholar"></i></a>
                     </div>
                 </div>
             </section>
