--- a/index.html
+++ b/index.html
@@ -110,6 +110,15 @@
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Feb 2021 - May 2024</span></div>
                     </div>
+					<div class="d-flex flex-column flex-md-row justify-content-between">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Centre for Development of Advanced Computing</h3>
+                            <div class="subheading mb-3">PG Diploma</div>
+							<div>Big Data Technologies</div>
+                            <p>GPA: 9.56</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">August 2013 - May 2017</span></div>
+                    </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Greater Noida Institute of Technology</h3>
