--- a/index.html
+++ b/index.html
@@ -13,7 +13,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Abhijat Chaturvedi</title>
+		<!-- for og image -->
+		<meta property="og:url" content="https://abhijatchaturvedi.github.io/" />
+		<meta property="og:type" content="article" />
+		<meta property="og:title" content="Abhijat Chaturvedi" />
+		<meta property="og:description" content="Personal website to rreach out.">
+		<meta property="og:image" content="https://abhijatchaturvedi.github.io/assets/img/profile.png">
+        <!-- for og image end -->
+		<title>Abhijat Chaturvedi</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
