--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
 		<!-- for og image -->
-		<meta property="og:url" content="https://abhijatchaturvedi.github.io/" />
+		<meta property="og:url" content="http://abhijatchaturvedi.github.io/" />
 		<meta property="og:type" content="article" />
 		<meta property="og:title" content="Abhijat Chaturvedi" />
-		<meta property="og:description" content="Personal website to rreach out.">
-		<meta property="og:image" content="https://abhijatchaturvedi.github.io/assets/img/profile.png">
+		<meta property="og:description" content="Personal website to reach out.">
+		<meta property="og:image" content="http://abhijatchaturvedi.github.io/assets/img/profile.png">
         <!-- for og image end -->
 		<title>Abhijat Chaturvedi</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
