--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<meta property="og:url" content="http://abhijatchaturvedi.github.io/" />
 		<meta property="og:type" content="article" />
 		<meta property="og:title" content="Abhijat Chaturvedi" />
-		<meta property="og:description" content="Personal website to reach out.">
+		<meta property="og:description" content="Personal website of Abhijat.">
 		<meta property="og:image" content="http://abhijatchaturvedi.github.io/assets/img/profile.png">
         <!-- for og image end -->
 		<title>Abhijat Chaturvedi</title>
